feat(tp1): agregar ejercicios iniciales del TP1